test/trivial/roxana/test_param_decl2.good
Error: Initializing param to a variable expression. (test_param_decl2.chpl:2)
